tests/eu.numberfour.n4js.transpiler.es5.tests/testdata/errors/HelloWorld.n4js.xt
/* XPECT_SETUP eu.numberfour.n4js.transpiler.es5.xpect.tests.CompileAndExecuteTest END_SETUP */

/* XPECT output --- 
<==
stdout:
hello world
stderr:
==>
--- */


var hello : string = 'hello';
var world : string = 'world';
const space : string = ' ';
console.log(hello + space + world);
